Prove varie ES6

--- a/ProveEs6/index.html
+++ b/ProveEs6/index.html
@@ -8,6 +8,9 @@
     <div id="container">
 
     </div>
+
+    <button id="button" type="button" name="button">PREMI</button>
+    
     <script src="js/script.js" charset="utf-8"></script>
   </body>
 </html>
